{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "9cdc8709-f29c-4b0f-9d77-206dc8cda844",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "80d703f2-e174-4ddb-871b-cdd68694bd66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f4383621-1e37-43f7-a4c3-88e8f6587e36",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "005a4b5a-1a18-472f-84f2-bde1a2b5788e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4272d08a-b413-4347-9b98-2e22fcf24d02",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6f8efed3-ea85-48bc-8031-080925843b87",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5ba0609b-5ed7-40d7-8951-eb955dc4f4c4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad",
                    "id": "cb642913-1c70-480a-b513-223493414706",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "33d9b8a8-5620-43f5-9d6c-e1a684d81bcf",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f17f6dcc-75bf-41ed-90b5-a6cc50fd966f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "025abbe4-5af0-434e-9fed-5b0c47367c1b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ce164de6-9e50-453f-a5c1-2792fb820e3f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Drone",
            "id": "ccac5067-310d-4058-a226-f1524f831987",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "4c5c1443-d1be-4232-b719-98933c975797",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Arrows",
                    "type": "Value",
                    "id": "69340422-20c6-4a29-b1e1-17014cad7af1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Thrusts",
                    "type": "Value",
                    "id": "b73a2bb3-be75-4c7e-be57-81ac742b94cb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "f1ffaae0-12ab-4652-97a5-c7028c37c7a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "02c9609d-69c7-485c-a7e0-38836c85ea90",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "acf0b965-4bd0-4090-a64f-f9c138c203aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9abcb447-a03e-4646-a6b9-20af08f0dde0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dfec5aa2-32e9-46e4-a3fd-d7b28721d6fc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a255a816-05a2-417d-bb1c-04de4f42e66f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "5bfc9137-7e6f-46e9-bd8d-a74f6b856e0b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "efcf8268-7630-4950-886b-7aa68c7a7ab8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9f147930-d0f7-4989-800a-27bdf76797f7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad",
                    "id": "3d209d58-6469-4bd6-b0f4-9e7e818abd2f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "587962c6-b6d5-4c5f-aada-06452eb5972f",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a22f67fb-4be6-4094-be85-48a5f89e56bf",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Arrows",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "6ae0786d-587b-42e9-8521-494c40ea80f3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c8da09db-9943-4504-a954-53861509e1bd",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1214bb60-fb29-417e-bb71-297414548e51",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad",
                    "id": "f8b1ee20-65b5-4cd1-8474-d57da527e03a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d9320c6e-521b-4de8-82f9-5d490500d4ff",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f7156bc4-d358-48bd-ae4c-ae176d9be3fc",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrusts",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e030e6a9-7230-44e2-8304-5c16a103630f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a777d94-fe77-4cf5-94b1-907f590d4e31",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamePad",
                    "id": "f5628144-7983-4f35-a8ff-5a785e4d2b05",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8904bf7d-f5a7-4728-8aa3-c05cee2b9fb4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2fa4a735-9d33-4701-8eca-9845e5de4f3e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c7678f05-3089-46bc-889d-4febef2df124",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b1316522-43a0-4844-8526-167251b37f35",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ForkLift",
            "id": "30906c39-731d-4735-a4b8-9fddb662cdcb",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "ad0f50c0-3df4-4fc2-9597-df95d2d66a66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LiftUp",
                    "type": "Button",
                    "id": "b0a56e92-c738-4c01-9154-b3648e24a7f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LiftDown",
                    "type": "Button",
                    "id": "d48b5fe4-5f49-43a9-96d5-80e956d761c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "72691986-2a90-4978-a270-d0d584c1c342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "04632e41-d90e-46c9-b5de-20219ceaaa6c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5c5a2d75-fa00-4f06-8e35-ec82c53c403b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "684c608c-9fe9-4eeb-bbd2-e5a61e3a76bc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b3ff2a6c-4125-40cd-ae00-8039fa57038f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c553d1ad-2ce8-41a9-9a9c-811555e93f3c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4ae07147-5da0-49b0-afb0-75ff6f39de3f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fd92bf1-ecfd-4793-90ae-23add661c337",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b1aa17c-d060-4414-a38a-2ee8524ac888",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01284a98-18f8-444e-af5b-6a2fdf202ff5",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5049291d-a044-4975-bd9e-e33f1bc24c8f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamePad",
                    "id": "bc4c5a0a-38cf-447d-a948-d8f011a1d6a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a0405207-ae3a-4c11-abe4-9ac86debe1b2",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e3afa9b9-1373-4530-974d-1109d1260a89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1b9b988d-a470-4f4a-8d7f-a3afb637eed3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e109e154-605d-49c6-ba9b-ea4ca0243b81",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "InteractableZone",
            "id": "78118bea-7d1c-4999-be6d-2638505c3f8b",
            "actions": [
                {
                    "name": "ZoneKey",
                    "type": "Button",
                    "id": "394439cf-701b-4e3f-8d07-e40673152be0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb8a5445-585e-4194-aaa0-eba1bb5a7629",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoneKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "812ac056-e680-4b8a-85e7-05d3b61e65b5",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoneKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}